# cpp_toy_language

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
src/: Value.h  main.cpp  toy.cpp  toy.h
src/Interpreter/: Interpreter.h
src/lexer/: AstPrinter.h  Environment.h  Errors.h  Expr.h  Parser.h  Stmt.h  lexer.cpp  lexer.h  token.cpp  token.h
tools/expression_generator/: CMakeLists.txt  expression_generator.cpp
